--- a/client/src/component/Notification/_notification.scss
+++ b/client/src/component/Notification/_notification.scss
@@ -4,7 +4,7 @@
 
 .notification {
   //   border: 0.1rem solid v.$light-orange;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -65,14 +65,13 @@
       1: v.$light-yellow,
       2: v.$light-green,
       3: v.$light-blue,
-      4: v.$light-red,
     );
 
     .item {
       width: 100%;
       min-height: 10vh;
       display: grid;
-      grid-template-columns: auto 1fr auto;
+      grid-template-columns: 1fr auto;
       align-items: center;
       padding: 0.75rem 0.85rem;
       gap: 0.65rem;
@@ -82,16 +81,6 @@
       @each $index, $color in $item-colors {
         &:nth-child(#{$index}n) {
           background-color: $color;
-        }
-      }
-
-      .image {
-        width: 100%;
-        height: auto;
-
-        img {
-          @include m.circle(2.4rem);
-          object-fit: cover;
         }
       }
 
