--- a/client/src/pages/Order/_order.scss
+++ b/client/src/pages/Order/_order.scss
@@ -29,23 +29,23 @@
       height: auto;
       display: grid;
       grid-template-columns: repeat(2, minmax(24rem, 1fr));
-      row-gap: 1.6rem;
+      row-gap: 2.2rem;
 
       .item {
         display: grid;
         grid-template-columns: auto 1fr;
-        grid-template-rows: auto auto 1fr;
+        grid-template-rows: auto auto 1fr 1fr;
         grid-template-areas:
           "image title"
           "image price"
+          "image stock"
           "image action";
-        gap: 0.1rem 1.4rem;
+        gap: 0 1.4rem;
         align-items: center;
-        // border: 0.15rem solid #fff;
 
         &-image {
           border: 0.2rem solid #fff;
-          @include m.circle($w-h: 8.4rem);
+          @include m.circle($w-h: 9.2rem);
           grid-area: image;
           //   padding-right: 1.2rem;
 
@@ -69,9 +69,22 @@
           font-weight: 800;
         }
 
+        &-stock {
+          height: 100%;
+          // border: .1rem #fff solid;
+          font-size: 1rem;
+          color: #fff;
+          grid-area: stock;
+          font-weight: 800;
+          @include m.flex($justify: flex-start, $align: flex-end);
+        }
+        
         &-action {
+          padding-top: .2rem;
+          height: 100%;
+          // border: .1rem #fff solid;
           grid-area: action;
-          @include m.flex($justify: flex-start);
+          @include m.flex($justify: flex-start, $align: flex-start);
           gap: 0.25rem;
           //   border: 0.15rem solid #fff;
 
