--- a/client/src/pages/Store/_store.scss
+++ b/client/src/pages/Store/_store.scss
@@ -6,9 +6,11 @@
 .store {
   width: 100%;
   height: auto;
+  @include m.flex($direction: column, $align: flex-start);
 
-  &-new-product {
-    display: flex;
+  .new-product {
+    width: 100%;
+    @include m.flex($justify: flex-end);
     gap: 0.8rem;
 
     button {
@@ -20,93 +22,159 @@
       background-color: #000;
       padding: 0.6rem 0.9rem;
       border: none;
-      transition: all 0.4s;
+      transition: all 0.4s ease-in-out;
       border-radius: 0.3rem;
 
       .material-symbols-outlined {
         font-size: 1.05rem;
         font-variation-settings: "FILL" 0, "wght" 600, "GRAD" 0, "opsz" 24;
+        transition: transform 0.5s ease-in-out;
       }
 
       &:hover {
         background-color: v.$light-orange;
         color: #fff;
+
+        .material-symbols-outlined {
+          font-size: 1.05rem;
+          font-variation-settings: "FILL" 1, "wght" 600, "GRAD" 0, "opsz" 24;
+          transform: rotate(90deg);
+        }
       }
     }
   }
 
-  &-title {
-    font-family: "Oswald", sans-serif;
-    color: v.$dark-orange;
-    font-size: 3.2rem;
-    padding: 2.4rem 0 1.2rem;
-    //   border: 0.1rem #000 solid;
-  }
-
-  &-container {
+  &-wrapper {
     width: 100%;
     height: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 2rem;
+    @include m.flex($direction: column, $align: flex-start);
+    gap: 2.4rem;
 
-    .item {
+    .foods,
+    .drinks {
       width: 100%;
       height: auto;
-      display: grid;
-      grid-template-columns: 3.5fr 6.5fr;
-      grid-template-rows: auto auto 1fr auto;
-      grid-template-areas:
-        "image name"
-        "image description"
-        "image stock"
-        "image price";
+      @include m.flex($direction: column, $align: flex-start);
+      gap: 1.2rem;
 
-      .image {
-        width: 15rem;
-        height: 12rem;
-        border-radius: 4%;
-        grid-area: image;
-        padding-right: 1.2rem;
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          border-radius: 4%;
-        }
-      }
-
-      .name {
-        grid-area: name;
+      .title {
+        line-height: 120%;
         font-family: "Oswald", sans-serif;
-        font-weight: 900;
-        font-size: 1.6rem;
-        text-transform: uppercase;
+        color: v.$dark-orange;
+        font-size: 3.2rem;
       }
 
-      .description {
-        font-weight: 400;
-        grid-area: description;
-      }
-
-      .stock {
-        grid-area: stock;
-        font-weight: 700;
+      .container {
+        width: 100%;
         height: auto;
-        margin-top: auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+        gap: 2.4rem 1.8rem;
 
-        span {
-          font-weight: 900;
-          color: v.$dark-orange;
+        .item {
+          border-radius: 4%;
+          width: 100%;
+          height: auto;
+          display: grid;
+          grid-template-columns: 1fr auto;
+          grid-template-rows: auto 1fr 1fr 1fr auto;
+          grid-template-areas:
+            "image image"
+            "name name"
+            "description description"
+            "stock action"
+            "price action";
+
+          .image {
+            width: 100%;
+            height: 12rem;
+            border-radius: 0.4rem;
+            grid-area: image;
+            border: #fff solid 0.3rem;
+            margin-bottom: 0.6rem;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 0.15rem;
+            }
+          }
+
+          .name {
+            // border: #000 solid .1rem;
+            grid-area: name;
+            font-family: "Oswald", sans-serif;
+            font-weight: 900;
+            font-size: 1.6rem;
+            text-transform: capitalize;
+            // line-height: 100%;
+          }
+
+          .description {
+            font-weight: 400;
+            line-height: 120%;
+            grid-area: description;
+            text-align: justify;
+            // border: #000 solid .1rem;
+          }
+
+          .stock {
+            grid-area: stock;
+            font-weight: 700;
+            height: auto;
+            // border: #000 solid .1rem;
+            @include m.flex($justify: flex-start, $align: flex-end);
+            gap: 0.3rem;
+
+            span {
+              font-weight: 900;
+              color: v.$dark-orange;
+            }
+          }
+
+          .price {
+            margin-top: -0.15rem;
+            color: v.$light-orange;
+            font-weight: 700;
+            font-size: 1.4rem;
+            height: fit-content;
+            line-height: 100%;
+            // border: #000 solid .1rem;
+          }
+
+          .action {
+            // border: #000 solid .1rem;
+            @include m.flex($align: flex-end);
+            gap: 0.2rem;
+            grid-area: action;
+
+            @mixin action($color) {
+              font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
+              padding: 0.15rem;
+              border: 0.15rem solid $color;
+              border-radius: 0.25rem;
+              background-color: transparent;
+              color: $color;
+              font-size: 1.2rem;
+
+              &:hover {
+                font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0,
+                  "opsz" 24;
+                background-color: $color;
+                color: #fff;
+              }
+            }
+
+            .material-symbols-outlined:first-child {
+              @include action(v.$light-yellow);
+            }
+
+            .material-symbols-outlined:last-child {
+              @include action(v.$light-red);
+            }
+          }
         }
-      }
-
-      .price {
-        font-weight: 700;
-        color: v.$light-orange;
-        font-size: 1.4rem;
-        padding-bottom: 0.8rem;
       }
     }
   }
