--- a/client/src/component/Notification/_notification.scss
+++ b/client/src/component/Notification/_notification.scss
@@ -3,7 +3,7 @@
 @use "sass:color";
 
 .notification {
-  //   border: 0.1rem solid v.$light-orange;
+  //   border: 0.1rem solid v.$light-pink;
   position: absolute;
   top: 0;
   left: 0;
@@ -16,7 +16,7 @@
     top: 14.8vh;
     right: 7vw;
     z-index: 100;
-    width: 25vw;
+    width: 28vw;
     height: fit-content;
     border-radius: 0.2rem;
     background-color: #fff;
@@ -31,16 +31,16 @@
       height: 1.6rem;
       transform: rotate(45deg);
       border-radius: 0.1rem;
-      border-top: 0.15rem solid v.$light-orange;
-      border-left: 0.15rem solid v.$light-orange;
+      border-top: 0.15rem solid v.$dark-gray;
+      border-left: 0.15rem solid v.$dark-gray;
       border-bottom: 0.15rem solid transparent;
       border-right: 0.15rem solid transparent;
       z-index: -1;
-      background-color: v.$light-orange;
+      background-color: v.$dark-gray;
     }
 
     @mixin helper($padding: 0.5rem 0.85rem) {
-      background-color: v.$light-orange;
+      background-color: v.$dark-gray;
       color: #fff;
       font-size: 0.94rem;
       font-weight: 600;
@@ -54,43 +54,53 @@
     }
 
     .all-message {
+      position: absolute;
       @include helper($padding: 0.75rem 0.85rem);
       border-bottom-left-radius: 0.2rem;
       border-bottom-right-radius: 0.2rem;
+      width: 100%;
+      height: auto;
+      text-decoration: none;
       text-align: center;
       border-top: 0.15rem solid #fff;
     }
 
-    $item-colors: (
-      1: v.$light-yellow,
-      2: v.$light-green,
-      3: v.$light-blue,
-    );
-
     .item {
       width: 100%;
-      min-height: 10vh;
+      min-height: auto;
       display: grid;
       grid-template-columns: 1fr auto;
       align-items: center;
       padding: 0.75rem 0.85rem;
-      gap: 0.65rem;
+      gap: 1rem;
       border-top: 0.15rem solid #fff;
       font-size: 0.86rem;
+      font-weight: 500;
 
-      @each $index, $color in $item-colors {
-        &:nth-child(#{$index}n) {
-          background-color: $color;
-        }
+      &.green {
+        background-color: v.$light-green;
+      }
+
+      &.blue {
+        background-color: v.$light-blue;
+      }
+
+      &.yellow {
+        background-color: v.$light-yellow;
+      }
+
+      &.red {
+        background-color: v.$light-red;
       }
 
       .content {
         width: 100%;
-        height: 100%;
+        height: auto;
         padding-top: 0.2rem;
         //   @include m.flex($justify: flex-start);
 
         .text {
+          width: 100%;
           height: auto;
           line-height: 130%;
           color: #fff;
@@ -102,6 +112,8 @@
       }
 
       .time {
+        width: 100%;
+        height: auto;
         color: #fff;
         font-weight: 500;
       }
