--- a/client/src/component/Sidebar/_sidebar.scss
+++ b/client/src/component/Sidebar/_sidebar.scss
@@ -16,6 +16,10 @@
     .active {
       background-color: #000;
 
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 1, "wght" 600, "GRAD" 0, "opsz" 48;
+      }
+
       .text,
       .role,
       .material-symbols-outlined {
