--- a/client/src/helper/_modal.scss
+++ b/client/src/helper/_modal.scss
@@ -45,16 +45,20 @@
       // border: #000 solid 0.1rem;
     }
 
-    .form-product {
-      @include m.productStore();
-    }
-
     .form-receipt {
       @include m.receipt();
     }
 
+    .form-product {
+      @include m.productStore();
+    }
+
     .form-content {
-      @include m.flex($align: flex-start, $direction: column);
+      @include m.flex(
+        $align: flex-start,
+        $direction: column,
+        $justify: flex-start
+      );
       width: 100%;
       // border: #000 solid 0.1rem;
 
@@ -90,7 +94,20 @@
         font-size: 1.02rem;
         padding: 2%;
         width: 100%;
-        height: 6.4rem;
+        height: 100%;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: .2rem; 
+      }
+
+      .container-img {
+        width: 100%;
+        height: 16rem;
+        border-radius: .2rem; 
       }
     }
 
@@ -101,16 +118,16 @@
       height: auto;
       padding: 0.36rem 0.96rem;
       background-color: transparent;
-      border: 0.1rem solid v.$dark-orange;
+      border: 0.1rem solid v.$light-orange;
       outline: 0;
       text-transform: uppercase;
       border-radius: 0.25rem;
       font-weight: 600;
       margin-left: auto;
-      color: v.$dark-orange;
+      color: v.$light-orange;
 
       &:hover {
-        background-color: v.$dark-orange;
+        background-color: v.$light-orange;
         color: #fff;
       }
     }
