--- a/client/src/main.scss
+++ b/client/src/main.scss
@@ -7,6 +7,7 @@
 @use "./component/Footer/footer";
 @use "./component/Notification/notification";
 @use "./component/Layout/layout";
+@use "./component/Pagination/pagination";
 @use "./pages/Home/H_Hero/h-hero";
 @use "./pages/Home/H_Advantage/h-advantage";
 @use "./pages/Home/H_Feature/h-feature";
@@ -26,6 +27,7 @@
 @use "./pages/Order/order";
 @use "./pages/Transaction/transaction";
 @use "./pages/GoShipping/goShipping";
+@use "./pages/NotificationAll/notificationAll";
 
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Pacifico&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Archivo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;0,6..96,600;0,6..96,700;0,6..96,800;0,6..96,900;1,6..96,400;1,6..96,500;1,6..96,600;1,6..96,700;1,6..96,800;1,6..96,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&family=Poiret+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
