12th commit for pempek-joli

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -637,6 +637,7 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  margin-top: 6.6rem;
 }
 .h-feature-text {
   width: 100%;
