--- a/client/src/pages/Home/H_Feature/_h-feature.scss
+++ b/client/src/pages/Home/H_Feature/_h-feature.scss
@@ -14,6 +14,7 @@
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  margin-top: 6.6rem;
 
   &-text {
     // border: #fff 2px solid;
